style.css
:root {
  --shadow-erd: 0 4px 15px rgba(0, 0, 0, 0.1) !important;
}

.theme-switching * {
  transition: background-color 1200ms ease, color 1200ms ease !important;
}

@media (max-width: 600px) {
  .erd-bottom-shadow {
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.2) 0%, transparent 30%);
  }

  .erd-top-shadow {
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, transparent 20%);
  }

  :is(.erd-top-shadow, .erd-bottom-shadow) {
    background-color: transparent !important;
  }
}


.tiny-height {
  block-size: 8rem;
}

.tiny-width {
  inline-size: 8rem;
}

.elevate {
  box-shadow: var(--shadow-erd) !important;
}

#bg-canvas {
  width: 100%;
  height: 100%;
}

#m-bg-container {
  aspect-ratio: 9/19.5;
}

.ml-page-container {
  height: 40rem;
}

progress.quiz-progress-bar::-webkit-progress-value {
  transition: width 600ms ease;
}

progress.quiz-progress-bar::-moz-progress-bar {
  transition: width 600ms ease;
}

